name:                cocos2d-hs
version:             0.1.0.0
synopsis:            Cocos2d native binding library with reflex frp wrapper
description:         Please see README.md
homepage:            https://github.com/lynnard/cocos2d-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Lingnan Dai
maintainer:          lingnan.d@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- executable generator
--   hs-source-dirs:      generator
--   main-is:             Main.hs
--   other-modules:       Graphics.UI.Cocos2d.Generator.Interface.Common
--                      , Graphics.UI.Cocos2d.Generator.Interface.Texture
--                      , Graphics.UI.Cocos2d.Generator.Interface.Director
--                      , Graphics.UI.Cocos2d.Generator.Interface.Layer
--                      , Graphics.UI.Cocos2d.Generator.Interface.Node
--                      , Graphics.UI.Cocos2d.Generator.Interface.Scene
--                      , Graphics.UI.Cocos2d.Generator.Interface.Sprite
--                      , Graphics.UI.Cocos2d.Generator.Interface.Event
--                      , Graphics.UI.Cocos2d.Generator.Interface.Label
--                      , Graphics.UI.Cocos2d.Generator.Interface.Widget
--                      , Graphics.UI.Cocos2d.Generator.Interface.Audio
--                      , Graphics.UI.Cocos2d.Generator.Interface.CocoStudio
--   build-depends:       base >= 4.7 && < 5
--                      , haskell-src >=1.0 && <1.1
--                      , hoppy-generator
--                      , hoppy-std
--   ghc-options:         -Wall
--   default-language:    Haskell2010

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , hoppy-runtime
                     , colour
                     , linear
  exposed-modules:     Graphics.UI.Cocos2d
                     , Graphics.UI.Cocos2d.Common
                     , Graphics.UI.Cocos2d.Texture
                     , Graphics.UI.Cocos2d.Node
                     , Graphics.UI.Cocos2d.Layer
                     , Graphics.UI.Cocos2d.Director
                     , Graphics.UI.Cocos2d.Scene
                     , Graphics.UI.Cocos2d.Sprite
                     , Graphics.UI.Cocos2d.Event
                     , Graphics.UI.Cocos2d.Label
                     , Graphics.UI.Cocos2d.Widget
                     , Graphics.UI.Cocos2d.Audio
                     , Graphics.UI.Cocos2d.CocoStudio
  other-modules:       Graphics.UI.Cocos2d.Std
  c-sources:           cbits/Common.cpp
                       cbits/Texture.cpp
                       cbits/Layer.cpp
                       cbits/Node.cpp
                       cbits/Director.cpp
                       cbits/Scene.cpp
                       cbits/Sprite.cpp
                       cbits/Widget.cpp
                       cbits/Event.cpp
                       cbits/Label.cpp
                       cbits/Audio.cpp
                       cbits/CocoStudio.cpp
                       cbits/std.cpp
  include-dirs:        cbits
                       /home/lingnan/builds/cocos2d-x/cocos
                       /home/lingnan/builds/cocos2d-x/cocos/editor-support
                       /home/lingnan/builds/cocos2d-x/external
  -- extra-lib-dirs:      /home/lingnan/builds/cocos2d-x/prebuilt/android/armeabi/
  -- extra-libraries:     cocos2dxinternal
  cc-options:          -std=c++11 -stdlib=libc++
  ghc-options:         -Wall -fno-warn-orphans -fno-warn-name-shadowing
  default-language:    Haskell2010

test-suite cocos2d-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cocos2d-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lynnard/cocos2d-hs
